hphp/hack/test/typecheck/expression_trees/splice_err2.php.like_types.exp
File "splice_err2.php", line 9, characters 17-21:
Typing error (Typing[4110])
  File "splice_err2.php", line 9, characters 17-21:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 14, characters 6-39:
  But got `dynamic` because it is an unenforceable type
